--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint --fix",
     "e2e": "ng e2e",
-    "deploy": "gh-pages -d public"
+    "deploy": "gh-pages -d dist"
   },
   "private": true,
   "dependencies": {
