--- a/angular.json
+++ b/angular.json
@@ -18,17 +18,17 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "dist/",
-            "index": "dist/index.html",
-            "main": "dist/main.ts",
-            "polyfills": "dist/polyfills.ts",
+            "index": "src/index.html",
+            "main": "src/main.ts",
+            "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "aot": true,
             "assets": [
-              "dist/favicon.ico",
-              "dist/assets"
+              "src/favicon.ico",
+              "src/assets"
             ],
             "styles": [
-              "dist/styles.scss"
+              "src/styles.scss"
             ],
             "scripts": []
           },
