--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~11.2.14",
     "@angular/platform-browser-dynamic": "~11.2.14",
     "@angular/router": "~11.2.14",
+    "@emailjs/browser": "^3.4.0",
     "@glidejs/glide": "^3.4.1",
     "animate.css": "^4.1.1",
     "gh-pages": "^3.2.3",
