--- a/assets/data/working-projects.json
+++ b/assets/data/working-projects.json
@@ -1,17 +1,38 @@
 [
   {
-    "name": "Movie Search App",
-    "description": "Find the latest trending movies to binge watch on your weekend!",
+    "name": "Youtufy",
+    "description": "En esta aplicación puedes descargar el audio mp3 de tus videos de youtube favoritos y reproducirlos, crear carpetas por artista o género, también puedes crear tus propias listas de reproducción.",
     "links": [
       {
-        "value": "source code",
-        "url": ""
+        "value": "ver codigo",
+        "url": "https://github.com/KrisEmm/youtufy"
       }
     ],
     "tags": [
       "NodeJs",
       "Express",
-      "Angular"
+      "Typescript",
+      "Hexagon Architecture",
+      "DDD",
+      "CQRS"
+    ]
+  },
+  {
+    "name": "Nodejs DDD Monorepo Template",
+    "description": "Esta es una plantilla para empezar a implementar arquitectura hexagonal, ddd y cqrs en tus proyectos.",
+    "links": [
+      {
+        "value": "ver codigo",
+        "url": "https://github.com/KrisEmm/uptask"
+      }
+    ],
+    "tags": [
+      "NodeJs",
+      "Express",
+      "Typescript",
+      "Hexagon Architecture",
+      "DDD",
+      "CQRS"
     ]
   }
 ]
