Fix Projects Info Added

--- a/src/assets/data/working-projects.json
+++ b/src/assets/data/working-projects.json
@@ -23,7 +23,7 @@
     "links": [
       {
         "value": "ver codigo",
-        "url": "https://github.com/KrisEmm/uptask"
+        "url": "https://github.com/KrisEmm/nodejs-ddd-monorepo-template"
       }
     ],
     "tags": [
